files/script/test/parse_error/char/test_char_error1.ll


def main()
{
    var i = 1

    if (i !!= 1){
        print("i is not 1")
    }else {
        print("i is 1")
    }
}
#script("test/parse_error/char/test_char_error1.nl")
